[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "enquire"
version = "0.0.2"
authors = [{name = "Pavel Vorobyev", email = "viert.ru@gmail.com"}]
description = "PyInquirer-inspired prompt library"
requires-python = ">=3.10"
keywords = [
    "click",
    "PyInquirer",
    "prompt-toolkit",
    "cli",
    "command-line",
    "commandline",
    "command-line-interface",
    "python-inquiry",
    "inquirer"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python_toolkit",
]
